######################################################
#            PROJECT  : htmltop                      #
#            VERSION  : 0.1.0-dev                    #
#            DATE     : 11/2012                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

######################################################
add_definitions(-DNO_SSL)
add_library(mongoose mongoose.c)
SET_TARGET_PROPERTIES(mongoose PROPERTIES COMPILE_FLAGS -fPIC)