######################################################
#            PROJECT  : htopml                       #
#            VERSION  : 0.1.0                        #
#            DATE     : 12/2015                      #
#            AUTHOR   : Valat Sébastien              #
#            LICENSE  : CeCILL-C                     #
######################################################

######################################################
add_subdirectory(server)
add_subdirectory(json)
add_subdirectory(http-nodes)
add_subdirectory(common)
add_subdirectory(htopml)
